@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-12-08T01:18:51Z",
+  "timestamp" : "2022-12-08T08:20:40Z",
   "count_outdated" : 2648,
   "uniques_outdated" : 721,
   "count" : 2669,
-  "uniques" : 731,
+  "uniques" : 732,
   "clones" : [
     {
       "timestamp": "2022-11-24T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -60,6 +60,13 @@
       "count_minmax": [ 2, 6 ],
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ]
+    },
+    {
+      "timestamp": "2022-12-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
