@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-11-24T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -41,6 +41,11 @@
       "timestamp": "2022-12-07T00:00:00Z",
       "count": 6,
       "uniques": 3
+    },
+    {
+      "timestamp": "2022-12-08T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
