@@ -1,3 +1,11 @@
+2022-12-08T08:20:40Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3646517759 # 1099
+* notice: last 14d: unq all: 7 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 721 2648 / 731 2669
+* notice: next accum: outdated-unq outdated-all / unq all: 721 2648 / 732 2669
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-24 2022-12-08]
+
 2022-12-08T01:18:51Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3644329382 # 1098
 * notice: last 14d: unq all: 7 21
